syntax = "proto3";
option go_package = "./pb";

package proto;

import "user_msg.proto";


service UserService{
    rpc CreateUser(UserRequest) returns (ResponseMessage);
    rpc CreateUserOTP(UserRequest) returns (ResponseMessage);
    rpc UpdateUser(UserRequest) returns (ResponseMessage);
    rpc DeleteUser(DeleteUserRequest) returns (ResponseMessage);
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
    rpc GetUserEmailById(GetUserEmailByIdRequest) returns (ResponseMessage);
    rpc AddAdmin(AddAdminRequest) returns (ResponseMessage);

}